update to deploy on heroku

--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.5",
     "@angular/cdk": "^6.3.0",
+    "@angular/cli": "^6.0.8",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.7",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
@@ -24,6 +27,7 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.1.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.4.7",
@@ -33,19 +37,21 @@
     "ngx-pagination": "^3.1.1",
     "ngx-paginator": "0.0.14",
     "ngx-toastr": "^8.8.0",
+    "path": "^0.12.7",
     "rxjs": "^6.2.0",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.5",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.5",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -55,6 +61,11 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
+  },
+  "engines": {
+    "node": "8.10.0",
+    "npm": "3.5.2"
   }
 }
