--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "dependencies": {
     "@angular/animations": "^6.0.5",
     "@angular/cdk": "^6.3.0",
-    "@angular/cli": "^6.0.8",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
-    "@angular/compiler-cli": "^6.0.7",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
@@ -40,8 +38,11 @@
     "ngx-toastr": "^8.8.0",
     "path": "^0.12.7",
     "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.1",
+    "zone.js": "^0.8.26",
     "typescript": "~2.7.2",
-    "zone.js": "^0.8.26"
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.5",
